--- a/.github/workflows/submodules.yml
+++ b/.github/workflows/submodules.yml
@@ -25,7 +25,7 @@ jobs:
           grep1="\(https:\/\/github\.com\/${orgName}\/[a-zA-Z0-9\-]{1,}(\/tree\/main)?\)"
           grep2="(?<=url = https:\/\/github\.com\/${orgName}\/)[a-zA-Z0-9\-\.]{1,}"
           curl -H "Authorization: token ${httpsToken}" -H 'Cache-Control: no-cache, no-store' -s https://raw.githubusercontent.com/${mainRepo}/main/README.md | grep -i -o -P "$grep1" | grep -o -P 's[0-9]-[a-zA-Z0-9]{1,}-[a-zA-Z0-9]{1,}' | sort > readmeRepos.tmp
-          sleep 5
+          cat readmeRepos.tmp
           curl -H "Authorization: token ${httpsToken}" -H 'Cache-Control: no-cache, no-store' -s https://raw.githubusercontent.com/${mainRepo}/main/.gitmodules | grep -i -o -P "$grep2" | sort > submoduleRepos.tmp
           comm -13 submoduleRepos.tmp readmeRepos.tmp > newRepos.tmp
           newReposCount=$(cat newRepos.tmp | wc -l)
