--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-
 [submodule "1st-semester/java/lab3"]
 	path = 1st-semester/java/lab3
 	url = https://github.com/cgsg-tt6itmo/s1-java-lab3
@@ -6,4 +5,8 @@
 [submodule "1st-semester/diskra/Huffman"]
 	path = 1st-semester/diskra/Huffman
 	url = https://github.com/cgsg-tt6itmo/s1-diskra-Huffman
+	branch = main
+[submodule "2nd-semester/java/lab5"]
+	path = 2nd-semester/java/lab5
+	url = https://github.com/cgsg-tt6ITMO/s2-java-lab5/tree/master/LabaN5
 	branch = main
